Mejora de metadatas y análisis de entidades NER