@@ -1,7 +1,6 @@
 package com.uniovi.rag.services.tools;
 
 import com.uniovi.rag.services.retriever.ContextRetriever;
-import org.json.JSONArray;
 import org.json.JSONObject;
 import org.springframework.ai.chat.client.ChatClient;
 import org.springframework.ai.document.Document;
@@ -10,6 +9,15 @@ import java.util.List;
 
 import static com.uniovi.rag.utils.InfoExtractor.*;
 
+/**
+ * Enhanced GetFieldTool for extracting specific fields from meeting minutes with intelligent NER analysis.
+ * 
+ * Features:
+ * - Intelligent NER-based filtering using EnhancedNERHandler
+ * - Temporal context filtering
+ * - Semantic field relevance evaluation
+ * - Enhanced field extraction and analysis
+ */
 public class GetFieldTool extends AbstractTool {
 
     public GetFieldTool(ChatClient chatClient, ContextRetriever retriever) {
@@ -20,17 +28,27 @@ public class GetFieldTool extends AbstractTool {
     public ToolResult execute(ToolExecutionContext ctx) {
         String query = ctx.query();
         JSONObject ner = ctx.nerEntities();
+        
+        log().debug("Executing get field query: {} with NER: {}", query, ner != null ? ner.toString() : "null");
+        
         List<Document> docs = retrieveDocuments(query);
 
-        for (Document doc : docs) {
-            if (ner != null) {
-                if (matchesNER(doc, ner)) {
+        // Filter documents based on NER if available
+        if (ner != null) {
+            // Use EnhancedNERHandler for intelligent filtering
+            List<Document> filteredDocs = nerHandler.filterDocumentsByTemporalContext(docs, ner);
+            
+            for (Document doc : filteredDocs) {
+                if (nerHandler.matchesDocumentWithNER(doc, ner)) {
                     String value = extractLiteralFieldByIntent(query, ner, doc.getContent());
                     if (value != null && !value.isBlank()) {
                         return ToolResult.from(value, getClass());
                     }
                 }
-            } else {
+            }
+        } else {
+            // Fallback to LLM-based relevance
+            for (Document doc : docs) {
                 if (isRelevantByLLM(doc.getContent(), query)) {
                     String value = extractLiteralFieldByIntent(query, null, doc.getContent());
                     if (value != null && !value.isBlank()) {
@@ -39,38 +57,37 @@ public class GetFieldTool extends AbstractTool {
                 }
             }
         }
+        
         String notFound = generateNotFoundMessage(query);
         return ToolResult.from(notFound, getClass());
     }
 
-    private boolean matchesNER(Document doc, JSONObject ner) {
-        String[] fields = {"date", "place", "startTime", "endTime", "president", "secretary", "attendees", "numberOfAttendees", "agenda", "decisions", "mentionedEntities", "topics", "section", "summary"};
-        String content = doc.getContent().toLowerCase();
-        for (String field : fields) {
-            if (ner.has(field)) {
-                JSONArray arr = ner.optJSONArray(field);
-                if (arr != null && arr.length() > 0) {
-                    boolean anyMatch = false;
-                    for (int i = 0; i < arr.length(); i++) {
-                        String value = arr.getString(i).toLowerCase();
-                        if (!value.isBlank() && content.contains(value)) {
-                            anyMatch = true;
-                            break;
-                        }
-                    }
-                    if (!anyMatch) return false;
-                }
-            }
-        }
-        return true;
-    }
-
+    /**
+     * Determines if content is relevant to query using LLM
+     */
     private boolean isRelevantByLLM(String content, String query) {
-        String prompt = """
-            Given the following user query (in any language):\n"%s"\nand the following minutes content:\n"%s"\n\nDoes this minutes document match all the conditions in the query? Answer only YES or NO (in the language of the query).
-            """.formatted(query, content.substring(0, Math.min(1000, content.length())));
-        String result = chatClient.prompt().user(prompt).call().content().strip().toLowerCase();
-        return result.startsWith("yes") || result.startsWith("sí");
+        String prompt = String.format("""
+            Given the following user query (in any language):
+            "%s"
+            
+            And the following meeting minutes content:
+            "%s"
+            
+            Does this minutes document match all the conditions in the query? 
+            Answer only YES or NO in the same language as the query.
+            """, query, content.substring(0, Math.min(1000, content.length())));
+        
+        String result = chatClient
+                .prompt()
+                .user(prompt)
+                .call()
+                .content()
+                .strip()
+                .toLowerCase();
+        
+        // Check for positive responses in multiple languages
+        return result.startsWith("yes") || result.startsWith("sí") || result.startsWith("si") || 
+               result.startsWith("oui") || result.startsWith("ja") || result.startsWith("da");
     }
 
     private String extractLiteralFieldByIntent(String query, JSONObject ner, String content) {
